# cranelift_codegen_wasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  optable.rs  tests.rs
src/conversions/: block.rs  cond.rs  inst.rs  mod.rs  seq.rs  sig.rs  ty.rs
src/filetests/: README.md  branching.clif  control-flow.clif  expr.clif  fib.clif  loop.clif  loop2.clif
src/filetests/wasmtime/: README.md  brnz.clif  brz.clif  condbr-i32.clif  condbr.clif  control.clif  iadd_i32.clif  isub_i32.clif  simple.clif
src/filetests/wasmtime/icmp/eq/: i32.clif
src/tests/: mod.rs  utils.rs
