[package]
name = "cranelift_codegen_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.79.0"
cranelift-module = "0.79.0"
fnv = "1.0.7"
log = "0.4.14"
relooper = "0.1.0"
target-lexicon = "0.12.2"
wabt = "0.10.0"
walrus = "0.19.0"

[dev-dependencies]
cranelift-frontend = "0.79.0"
cranelift-reader = "0.79.0"
env_logger = "0.9.0"
ezio = "0.1.0"
rusty-fork = "0.3.0"
wasmtime = "0.32.0"
